--- a/index.html
+++ b/index.html
@@ -13,6 +13,10 @@
       --color-4: #B3C6FF;
       --color-5: #99A8C7;
       --color-6: #80ACFF;
+      --duration: 3s;
+      --easing: cubic-bezier(0.7, 0, 0.3, 1);
+      --angle: 90deg;
+      --font-size: 48px;
     }
 
     * {
@@ -35,19 +39,21 @@
 
     .text-container {
       text-align: center;
-      max-width: 800px;
+      max-width: 900px;
+      width: 100%;
     }
 
     h1 {
-      font-size: 48px;
+      font-size: var(--font-size);
       font-weight: 300;
-      line-height: 1.4;
+      line-height: 1.2;
       letter-spacing: -0.02em;
       color: #101419;
+      transition: font-size 0.2s ease;
     }
 
     .gradient-text {
-      background: linear-gradient(90deg,
+      background: linear-gradient(var(--angle),
           var(--color-1) 0,
           var(--color-1) 33.33%,
           var(--color-2) 40%,
@@ -61,7 +67,7 @@
       background-clip: text;
       -webkit-background-clip: text;
       -webkit-text-fill-color: transparent;
-      animation: gradientShift 3s cubic-bezier(0.7, 0, 0.3, 1) infinite;
+      animation: gradientShift var(--duration) var(--easing) infinite;
     }
 
     @keyframes gradientShift {
@@ -71,11 +77,13 @@
         background: #101419;
         background-clip: text;
         -webkit-background-clip: text;
-        -webkit-text-fill-color: ##99a8c7;
+        -webkit-text-fill-color: inherit;
+        /* Fallback */
+        -webkit-text-fill-color: #101419;
       }
 
       15% {
-        background: linear-gradient(90deg,
+        background: linear-gradient(var(--angle),
             var(--color-1) 0,
             var(--color-1) 33.33%,
             var(--color-2) 40%,
@@ -106,43 +114,54 @@
     }
 
     /* Controls UI */
-    .controls {
+    .controls-wrapper {
       position: fixed;
-      bottom: 40px;
+      bottom: 20px;
       left: 50%;
       transform: translateX(-50%);
-      background: rgba(255, 255, 255, 0.8);
-      backdrop-filter: blur(10px);
-      padding: 12px 24px;
-      border-radius: 100px;
-      display: flex;
-      gap: 16px;
-      box-shadow: 0 10px 30px rgba(0, 0, 0, 0.05);
-      border: 1px solid rgba(0, 0, 0, 0.05);
+      width: 95%;
+      max-width: 1000px;
       z-index: 100;
     }
 
-    .copy-btn {
-      background: #101419;
-      color: white;
-      border: none;
-      padding: 8px 16px;
-      border-radius: 20px;
-      font-size: 11px;
+    .controls {
+      background: rgba(255, 255, 255, 0.85);
+      backdrop-filter: blur(20px);
+      -webkit-backdrop-filter: blur(20px);
+      padding: 20px;
+      border-radius: 24px;
+      display: flex;
+      flex-direction: column;
+      gap: 20px;
+      box-shadow: 0 20px 50px rgba(0, 0, 0, 0.1);
+      border: 1px solid rgba(0, 0, 0, 0.05);
+    }
+
+    .control-row {
+      display: flex;
+      flex-wrap: wrap;
+      gap: 24px;
+      align-items: center;
+      justify-content: center;
+    }
+
+    .control-group {
+      display: flex;
+      flex-direction: column;
+      gap: 6px;
+    }
+
+    .control-label {
+      font-size: 10px;
       font-weight: 600;
-      cursor: pointer;
-      margin-left: 8px;
-      transition: all 0.2s ease;
-      white-space: nowrap;
+      color: #101419;
+      text-transform: uppercase;
+      letter-spacing: 0.05em;
     }
 
-    .copy-btn:hover {
-      background: #000;
-      transform: translateY(-1px);
-    }
-
-    .copy-btn:active {
-      transform: translateY(0);
+    .color-pickers {
+      display: flex;
+      gap: 12px;
     }
 
     .color-picker-item {
@@ -156,12 +175,13 @@
       -webkit-appearance: none;
       appearance: none;
       border: none;
-      width: 24px;
-      height: 24px;
+      width: 28px;
+      height: 28px;
       border-radius: 50%;
       cursor: pointer;
       background: none;
       overflow: hidden;
+      box-shadow: 0 0 0 1px rgba(0, 0, 0, 0.1);
     }
 
     .color-picker-item input[type="color"]::-webkit-color-swatch-wrapper {
@@ -169,33 +189,97 @@
     }
 
     .color-picker-item input[type="color"]::-webkit-color-swatch {
-      border: 1px solid rgba(0, 0, 0, 0.1);
+      border: none;
       border-radius: 50%;
     }
 
-    .color-label {
-      font-size: 10px;
-      font-weight: 500;
-      color: #666;
-      text-transform: uppercase;
-      letter-spacing: 0.05em;
+    input[type="range"] {
+      -webkit-appearance: none;
+      appearance: none;
+      width: 100px;
+      height: 4px;
+      background: rgba(0, 0, 0, 0.1);
+      border-radius: 2px;
+      outline: none;
+    }
+
+    input[type="range"]::-webkit-slider-thumb {
+      -webkit-appearance: none;
+      width: 12px;
+      height: 12px;
+      background: #101419;
+      border-radius: 50%;
+      cursor: pointer;
+      transition: transform 0.1s ease;
+    }
+
+    input[type="range"]::-webkit-slider-thumb:hover {
+      transform: scale(1.2);
+    }
+
+    select,
+    input[type="text"] {
+      padding: 6px 10px;
+      border-radius: 8px;
+      border: 1px solid rgba(0, 0, 0, 0.1);
+      background: white;
+      font-size: 11px;
+      font-family: inherit;
+      outline: none;
+    }
+
+    input[type="text"] {
+      width: 200px;
+    }
+
+    .copy-btn {
+      background: #101419;
+      color: white;
+      border: none;
+      padding: 10px 20px;
+      border-radius: 100px;
+      font-size: 12px;
+      font-weight: 600;
+      cursor: pointer;
+      transition: all 0.2s ease;
+      white-space: nowrap;
+    }
+
+    .copy-btn:hover {
+      background: #000;
+      transform: translateY(-1px);
+      box-shadow: 0 4px 12px rgba(0, 0, 0, 0.1);
     }
 
     /* Responsive */
     @media (max-width: 768px) {
+      body {
+        padding-bottom: 250px;
+      }
+
       h1 {
         font-size: 32px;
       }
 
-      .controls {
-        bottom: 20px;
-        gap: 8px;
-        padding: 8px 16px;
+      .controls-wrapper {
+        bottom: 10px;
       }
 
-      .color-picker-item input[type="color"] {
-        width: 20px;
-        height: 20px;
+      .controls {
+        padding: 16px;
+        gap: 16px;
+      }
+
+      .control-row {
+        gap: 12px;
+      }
+
+      input[type="range"] {
+        width: 80px;
+      }
+
+      input[type="text"] {
+        width: 100%;
       }
     }
   </style>
@@ -203,63 +287,145 @@
 
 <body>
   <div class="text-container">
-    <h1>
-      Never start from a <span class="gradient-text">blank slide</span> again.
+    <h1 id="main-heading">
+      Never start from a <span class="gradient-text" id="target-text">blank slide</span> again.
     </h1>
   </div>
 
-  <div class="controls">
-    <div class="color-picker-item">
-      <input type="color" id="color-1" value="#000000">
-      <span class="color-label">1</span>
+  <div class="controls-wrapper">
+    <div class="controls">
+      <div class="control-row">
+        <div class="control-group">
+          <span class="control-label">Colors</span>
+          <div class="color-pickers">
+            <div class="color-picker-item">
+              <input type="color" id="color-1" value="#000000">
+            </div>
+            <div class="color-picker-item">
+              <input type="color" id="color-2" value="#6B8FBF">
+            </div>
+            <div class="color-picker-item">
+              <input type="color" id="color-3" value="#6CB5EB">
+            </div>
+            <div class="color-picker-item">
+              <input type="color" id="color-4" value="#B3C6FF">
+            </div>
+            <div class="color-picker-item">
+              <input type="color" id="color-5" value="#99A8C7">
+            </div>
+            <div class="color-picker-item">
+              <input type="color" id="color-6" value="#80ACFF">
+            </div>
+          </div>
+        </div>
+
+        <div class="control-group">
+          <span class="control-label">Duration</span>
+          <input type="range" id="duration-slider" min="0.5" max="10" step="0.1" value="3">
+        </div>
+
+        <div class="control-group">
+          <span class="control-label">Easing</span>
+          <select id="easing-select">
+            <option value="cubic-bezier(0.7, 0, 0.3, 1)">Default</option>
+            <option value="linear">Linear</option>
+            <option value="ease">Ease</option>
+            <option value="ease-in-out">Ease In Out</option>
+            <option value="cubic-bezier(0.8, 0, 0.2, 1)">Slow Start/End</option>
+            <option value="cubic-bezier(0.4, 0, 0.2, 1)">Standard</option>
+          </select>
+        </div>
+
+        <div class="control-group">
+          <span class="control-label">Angle</span>
+          <input type="range" id="angle-slider" min="0" max="360" step="1" value="90">
+        </div>
+
+        <div class="control-group">
+          <span class="control-label">Size</span>
+          <input type="range" id="size-slider" min="12" max="120" step="1" value="48">
+        </div>
+      </div>
+
+      <div class="control-row">
+        <div class="control-group" style="flex: 1;">
+          <span class="control-label">Text Content</span>
+          <input type="text" id="text-input" value="Never start from a {blank slide} again.">
+        </div>
+        <button class="copy-btn" id="copy-btn">Copy CSS</button>
+      </div>
     </div>
-    <div class="color-picker-item">
-      <input type="color" id="color-2" value="#6B8FBF">
-      <span class="color-label">2</span>
-    </div>
-    <div class="color-picker-item">
-      <input type="color" id="color-3" value="#6CB5EB">
-      <span class="color-label">3</span>
-    </div>
-    <div class="color-picker-item">
-      <input type="color" id="color-4" value="#B3C6FF">
-      <span class="color-label">4</span>
-    </div>
-    <div class="color-picker-item">
-      <input type="color" id="color-5" value="#99A8C7">
-      <span class="color-label">5</span>
-    </div>
-    <div class="color-picker-item">
-      <input type="color" id="color-6" value="#80ACFF">
-      <span class="color-label">6</span>
-    </div>
-    <button class="copy-btn" id="copy-btn">Copy Config</button>
   </div>
 
   <script>
     const pickers = document.querySelectorAll('input[type="color"]');
+    const durationSlider = document.getElementById('duration-slider');
+    const easingSelect = document.getElementById('easing-select');
+    const angleSlider = document.getElementById('angle-slider');
+    const sizeSlider = document.getElementById('size-slider');
+    const textInput = document.getElementById('text-input');
+    const heading = document.getElementById('main-heading');
+    const colorRoot = document.documentElement;
+
+    function restartAnimation() {
+      const text = document.querySelector('.gradient-text');
+      if (!text) return;
+      text.style.animation = 'none';
+      text.offsetHeight; // Trigger reflow
+      text.style.animation = null;
+    }
+
     pickers.forEach(picker => {
       picker.addEventListener('input', (e) => {
-        const id = e.target.id;
-        const color = e.target.value;
-        document.documentElement.style.setProperty(`--${id}`, color);
-
-        // Restart animation if needed to see changes clearly
-        const text = document.querySelector('.gradient-text');
-        text.style.animation = 'none';
-        text.offsetHeight; // Trigger reflow
-        text.style.animation = null;
+        colorRoot.style.setProperty(`--${e.target.id}`, e.target.value);
+        restartAnimation();
       });
+    });
+
+    durationSlider.addEventListener('input', (e) => {
+      colorRoot.style.setProperty('--duration', `${e.target.value}s`);
+      restartAnimation();
+    });
+
+    easingSelect.addEventListener('change', (e) => {
+      colorRoot.style.setProperty('--easing', e.target.value);
+      restartAnimation();
+    });
+
+    angleSlider.addEventListener('input', (e) => {
+      colorRoot.style.setProperty('--angle', `${e.target.value}deg`);
+      restartAnimation();
+    });
+
+    sizeSlider.addEventListener('input', (e) => {
+      colorRoot.style.setProperty('--font-size', `${e.target.value}px`);
+    });
+
+    textInput.addEventListener('input', (e) => {
+      const val = e.target.value;
+      // Use {} to denote the gradient part
+      const parts = val.split(/{(.*?)}/);
+      if (parts.length >= 3) {
+        heading.innerHTML = `${parts[0]}<span class="gradient-text">${parts[1]}</span>${parts[2]}`;
+      } else {
+        heading.innerHTML = `<span class="gradient-text">${val}</span>`;
+      }
+      restartAnimation();
     });
 
     const copyBtn = document.getElementById('copy-btn');
     copyBtn.addEventListener('click', () => {
-      let config = '';
+      let css = `:root {\n`;
       pickers.forEach((picker, index) => {
-        config += `      --color-${index + 1}: ${picker.value};\n`;
+        css += `  --color-${index + 1}: ${picker.value};\n`;
       });
+      css += `  --duration: ${durationSlider.value}s;\n`;
+      css += `  --easing: ${easingSelect.value};\n`;
+      css += `  --angle: ${angleSlider.value}deg;\n`;
+      css += `  --font-size: ${sizeSlider.value}px;\n`;
+      css += `}`;
 
-      navigator.clipboard.writeText(config).then(() => {
+      navigator.clipboard.writeText(css).then(() => {
         const originalText = copyBtn.innerText;
         copyBtn.innerText = 'Copied!';
         copyBtn.style.background = '#00C853';
@@ -269,6 +435,9 @@
         }, 2000);
       });
     });
+
+    // Initial run
+    textInput.dispatchEvent(new Event('input'));
   </script>
 </body>
 
